--- a/public/stylesheets/tutor-lesson-page.css
+++ b/public/stylesheets/tutor-lesson-page.css
@@ -3,6 +3,7 @@
     display: inline-block;
     text-align: left;
     padding: 20px;
+    box-shadow: 0px 1px 3px rgba(100, 100, 100, 0.40);
 }
 
 .lessonContainer .lessonHeader{
@@ -15,14 +16,26 @@
     margin: 20px;
 }
 
-.lessonContainer .subject .status{
+.lessonContainer .subject .status,.lessonContainer .subject .mode{
     font-size: 18px;
+    margin-right: 10px;
 }
 
 .lessonContainer .lessonInfo{
     display: inline-block;
     font-size: 24px;
     line-height: 1.4;
+}
+
+.lessonContainer .createdOn{
+    display: inline-block;
+    margin: 20px 30px;
+    text-align: center;
+    color:#5DADE2;
+}
+
+.lessonContainer .createdOnDate{
+    display: block;
 }
 
 .lessonContainer .deadline{
@@ -65,7 +78,7 @@
     margin: 20px;
 }
 
-.lessonContainer .lessonDescription h2{
+.lessonContainer .lessonDescription h2,.reviewContainer h2{
     font-size: 25px;
     margin-bottom: 10px
 }
@@ -80,6 +93,97 @@
     margin: 20px;
 }
 
+.lessonContainer .solutionLinks{
+    margin:20px;
+}
 .divisonBorder{
     border-top: 1px solid #ccc;
+    position: relative;
+}
+
+.reviewContainer{
+    margin:20px;
+}
+
+.reviewContainer .reviewButton{
+    width:32px;
+    height:32px;
+    display: inline-block;
+    margin:10px;
+    cursor:pointer;
+}
+
+.inputHidden{
+    position: absolute;
+    left: -9999px;
+}
+
+.reviewContainer .likeButton{
+    background: url("../images/Thumbs-Up.png");
+    background-size: cover;
+
+}
+
+.reviewContainer .unlikeButton{
+    background: url("../images/Thumbs-Down.png");
+    background-size: cover;
+}
+
+.divisonBorder .flagButton{
+    background: url("../images/flag97.png");
+    background-size: cover;
+    height:24px;
+    width:24px;
+}
+
+label[for="flag"]{
+    position: absolute;
+    right: 20px;
+    top: 50px;
+}
+
+.reviewContainer input#like.clicked.selected ~ label .likeButton,.likeButton.alreadyReviewd{
+    background: url("../images/Thumbs-Up1.png");
+    background-size: cover;
+}
+
+.reviewContainer input#unlike.clicked.selected ~ label .unlikeButton,.unlikeButton.alreadyReviewd{
+    background: url("../images/Thumbs-Down1.png");
+    background-size: cover;
+}
+
+.reviewContainer .likeButton:hover{
+    background: url("../images/Thumbs-Up1.png");
+    background-size: cover;
+}
+
+.reviewContainer .unlikeButton:hover{
+    background: url("../images/Thumbs-Down1.png");
+    background-size: cover;
+}
+
+.reviewContainer textarea{
+    width:100%;
+    height: 100px;
+}
+
+.reviewContainer .buttonContainer{
+    margin:20px 0;
+}
+
+.reviewMessageContainer{
+    width:60%;
+    position: relative;
+}
+
+#requestLessonFormWrapper h2{
+    font-size: 22px;
+}
+
+.getLessonButton{
+    border:2px solid #EC7063;
+}
+
+.getLessonButton button{
+    background: #EC7063;
 }
