--- a/public/stylesheets/new-style.css
+++ b/public/stylesheets/new-style.css
@@ -20,7 +20,7 @@ html.indexPage{
 }
 
 
-a:link{
+a:link,a,a:active{
     color: inherit;
 }
 
@@ -63,6 +63,11 @@ header{
 
 }
 
+header a:link,header a:active,header a{
+    color:inherit;
+}
+
+
 header .nameHeading{
     font-size: 60px;
     position: absolute;
@@ -87,10 +92,35 @@ header ul li{
     top:0px;
     height:60px;
     line-height: 60px;
+    border-bottom: 1px solid #F4F4F4;
 }
 
 .min header .nameHeading{
     font-size:50px;
+}
+
+.scroll-arrow-wrapper {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: -41px;
+    width: 100%;
+    height: 82px;
+    text-align: center;
+    z-index: 4;
+}
+
+.scroll-arrow {
+    width: 71px;
+    height: 82px;
+    background: url(../images/New%20folder/scroll-arrow.png) no-repeat;
+    background-position: 0 0;
+    margin:auto;
+}
+
+
+.featureBox{
+    position:relative;
 }
 
 
@@ -448,17 +478,17 @@ aside li.active{
     height:100%;
 }
 
-#mainContentWrapper{
-    min-height:100%;
-    height: 100%;
-    width:100%;
+#mainContentWrapper {
+    min-height: calc(100% - 60px);
+    height: calc(100% - 60px);
+    width: 100%;
     position: relative;
-    left:0;
-    top:56px;
-    z-index:2;
-    width:100%;
+    left: 0;
+    top: 60px;
+    z-index: 2;
+    width: 100%;
     -webkit-transition: all 0.5s ease;
-    background:inherit;
+    background: inherit;
 }
 
 .indexPage#mainContentWrapper{
@@ -485,15 +515,16 @@ aside li.active{
 
 
 
-section{
+section {
     background: inherit;
-    min-height:100%;
+    min-height: 100%;
     margin-bottom: -142px;
-    padding-top:100px;
+    /* padding-top: 100px; */
     position: relative;
     text-align: center;
+    /* top: 60px; */
     z-index: 1;
-    border-left:1px solid #ccc;
+    border-left: 1px solid #ccc;
 }
 
 #indexSection{
@@ -828,7 +859,8 @@ color: #ffffff;
 .howItWorks .steps{
     display: inline-block;
     width: 33.1%;
-    height: 400px;
+    height: 500px;
+    padding-top: 50px;
     line-height: 100px;
     /* margin: 20px 70px; */
     /* border-radius: 5px; */
@@ -1235,7 +1267,7 @@ color: #ffffff;
 
 .howItWorks2 .headingBox,.howItWorks2 .contentBox{
     display: inline-block;
-    width: 49%;
+    width: 49.973%;
     float: left;
     height: 400px;
     position: relative;
@@ -1409,7 +1441,7 @@ footer {
     font-size: 18px;
     height: 150px;
     font-size: 16px;
-    font-color:#909CC2;
+    color:#fff;
     background:#231F20;
     text-align: center;
     border-left:1px solid #ccc;
