--- a/public/stylesheets/footer-links-style.css
+++ b/public/stylesheets/footer-links-style.css
@@ -1,28 +1,18 @@
-html{
-    background: #ffffff;
-}
-a{
-    color:#000;
-}
-.flinkHeader{
-    line-height: 56px;
+
+a {
+    color: #fff;
 }
 
-.flinkNameHeading{
-    font-size:32px;
-    margin-left:20px;
+header{
+    background: #fff;
+    top:0px;
+    height:60px;
+    line-height: 60px;
+    border-bottom: 1px solid #F4F4F4;
 }
 
-.color1{
-    color:#AF7AC5;
-}
-
-.color2{
-    color:#52BE80;
-}
-
-.color3{
-    color:#EC7063;
+header .nameHeading{
+    font-size:50px;
 }
 
 section{
@@ -103,8 +93,8 @@ strong{
     background: #fff;
     color:#465465;
     padding: 20px;
-    margin-bottom: 100px;
-    box-shadow: 0px 1px 3px rgba(100, 100, 100, 0.40);
+    margin: 100px 0;
+    bbox-shadow: 0px 1px 3px rgba(100, 100, 100, 0.40);
 }
 
 .contactContainer h1{
