--- a/public/stylesheets/footer-links-style.css
+++ b/public/stylesheets/footer-links-style.css
@@ -1,7 +1,4 @@
-
-a {
-    color: #fff;
-}
+a.anchor{display: block; position: relative; top: -250px; visibility: hidden;}
 
 header{
     background: #fff;
@@ -24,10 +21,13 @@ strong{
 }
 
 .internalNavigation{
-    display:inline-block;
+    /* display: inline-block; */
     text-align: left;
-    margin-left:70px;
-    float: left;
+    /* margin: 100px 0; */
+    /* margin: 70px; */
+    /* float: left; */
+    position: fixed;
+    top: 145px;
 }
 
 .internalNavigation li{
@@ -37,12 +37,14 @@ strong{
 }
 
 .policyContainer{
-    display:inline-block;
-    padding:10px;
+    display: inline-block;
+    padding: 10px;
     text-align: left;
-    width:800px;
-    border:2px solid #313D4C;
+    max-width: 800px;
+    border: 2px solid #313D4C;
     color: #465465;
+    margin: 100px 0;
+    margin-left: 600px;
 }
 
 .policyContainer .nameHeading{
