--- a/public/stylesheets/new-style.css
+++ b/public/stylesheets/new-style.css
@@ -11,6 +11,7 @@
 
 *,body,html{
     font-weight: 400;
+    font-family:'Open Sans', sans-serif;
 }
 
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak, .ng-hide {
@@ -593,8 +594,13 @@ section:after {
     position: absolute;
     top:0;
     left:0;
+    line-height: 500px;
     width:100%;
     height:100%;
+}
+
+.opacityCover h1{
+    font-size: 100px;
 }
 
 .searchBarWrapper .opacityCover{
